--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-integracao.dogapi.uri=https://api.thedogapi.com
-integracao.catapi.uri=https://api.thecatapi.com
+integration.dogapi.uri=https://api.thedogapi.com
+integration.catapi.uri=https://api.thecatapi.com
 spring.profiles.active=local
